# observibelity

./: .editorconfig  .env.example  .envrc.example  .gitignore  .helmignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONSISTENCY_REPORT.md  CONTRIBUTING.md  Chart.yaml  GRAFANA_CONNECTIVITY.md  LICENSE  Makefile  PHASE2_HEALTH_CHECK.md  PREFLIGHT_AUDIT.md  README.md  SECURITY.md  install.sh  skaffold.yaml  uninstall.sh  values-docker-desktop.yaml  values.yaml
.github/: CODEOWNERS  PROJECTS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
_archived_dashboards/: ai-obs-app-landing.json  ai-obs-finops.json  ai-obs-model-matrix.json  ai-obs-shift-left.json
_remote_backup_20260513/: ai-obs-app-neoncart.json  ai-obs-app-supportbot.json  ai-obs-best-models.json  ai-obs-cascade-spike.json  ai-obs-compliance.json  ai-obs-conv.json  ai-obs-cost.json  ai-obs-data-theft.json  ai-obs-evals.json  ai-obs-ground.json  ai-obs-pii.json  ai-obs-tools.json
dashboards/: RATING.md  README.md  _apply_ai_obs_aesthetic.py  _design_tokens.py  _humanize_table.py  _rebuild_ai_obs_welcome.py  _rebuild_loadgen.py  _rebuild_outage_cost.py  ai-obs-app-landing.json  ai-obs-app-neoncart.json  ai-obs-app-supportbot.json  (+36 more)
src/llm-gateway/: Dockerfile  README.md  pyproject.toml
src/llm-gateway/app/: admission.py  main.py  persona_email.py  prewarm.py  pricing.py  scheduler.py  sigil.py
src/llm-gateway/app/providers/: __init__.py  anthropic.py  base.py  ollama.py
src/llm-gateway/tests/: test_admission.py  test_anthropic_translation.py  test_main.py  test_ollama_rotation.py  test_prewarm.py  test_pricing.py  test_scheduler.py  test_sigil.py
src/neoncart/: Dockerfile  README.md  pyproject.toml
src/neoncart/app/: db.py  main.py  models.py  personas.py
src/neoncart/app/static/: app.js  style.css
src/neoncart/app/templates/: _chat_widget.html  base.html  cart.html  catalog.html  index.html
src/neoncart/app/templates/products/: detail.html
src/neoncart/tests/: test_chat.py  test_health.py  test_personas.py
src/specialists/_base/: README.md  pyproject.toml
src/specialists/_base/specialist_base/: __init__.py  main.py  specialist.py
src/specialists/_base/tests/: test_base.py
src/specialists/nc-fraud-detector/: Dockerfile  README.md  pyproject.toml
src/specialists/nc-fraud-detector/app/: __init__.py  main.py  specialist.py
src/specialists/nc-fraud-detector/tests/: test_specialist.py
src/specialists/nc-gift-finder/: Dockerfile  README.md  pyproject.toml
src/specialists/nc-gift-finder/app/: __init__.py  main.py  specialist.py
src/specialists/sb-policy-finder/: Dockerfile  README.md  pyproject.toml
src/specialists/sb-policy-finder/app/: main.py  specialist.py
src/specialists/sb-policy-finder/tests/: test_specialist.py
src/specialists/sb-router/: Dockerfile  README.md  pyproject.toml
src/specialists/sb-router/app/: main.py  specialist.py
src/specialists/sb-router/tests/: test_specialist.py
src/specialists/sb-security-handler/: Dockerfile  README.md  pyproject.toml
src/specialists/sb-security-handler/app/: main.py  specialist.py
src/specialists/sb-security-handler/tests/: test_specialist.py
src/tools/_base/: README.md  pyproject.toml
src/tools/_base/tests/: test_tool_base.py
src/tools/_base/tool_base/: __init__.py  main.py  tool.py
src/tools/add_to_cart/: Dockerfile  pyproject.toml
src/tools/add_to_cart/app/: __init__.py  main.py  tool.py
src/tools/geo_lookup/: Dockerfile  README.md  pyproject.toml
src/tools/geo_lookup/app/: __init__.py  main.py  tool.py
src/tools/geo_lookup/tests/: test_tool.py
src/tools/get_order_history/: Dockerfile  README.md  pyproject.toml
src/tools/get_order_history/app/: __init__.py  main.py  tool.py
src/tools/get_order_history/tests/: test_tool.py
src/tools/get_ticket/: Dockerfile  README.md  pyproject.toml
src/tools/get_ticket/app/: main.py  tool.py
src/tools/get_ticket/tests/: test_tool.py
src/tools/navigate/: Dockerfile  pyproject.toml
src/tools/navigate/app/: __init__.py  main.py  tool.py
src/tools/reset_password/: Dockerfile  README.md  pyproject.toml
src/tools/reset_password/app/: main.py  tool.py
src/tools/reset_password/tests/: test_tool.py
src/tools/verify_inventory/: Dockerfile  README.md  pyproject.toml
src/tools/verify_inventory/app/: __init__.py  main.py  tool.py
tools/: alerts-sync.sh  audit_dashboards.py  backup.sh  bootstrap-cluster.sh  build-images.sh  build_demo_dashboards.py  bump-version.sh  check-scaffold.sh  dashboards-sync.sh  deploy-doctor.sh  deploy-watch-pods.sh  deploy-watch.sh  disaster-recovery.sh  evaluators-sync.sh  import-from-demo-pack.sh  k3s-import-images.sh  k6-tail.sh  new-usecase.sh  pod-doctor.sh  pyproject.toml  quick-test.sh  requirements.txt  restore.sh  seed-loader.py  setup-gh-secrets.sh  soak-test.sh  usecase-build.sh  verify.sh  wizard.sh
tools/deploy_doctor/: __init__.py  __main__.py  collect.py  diagnose.py
tools/deploy_doctor/providers/: __init__.py  anthropic.py  base.py  ollama.py
tools/lib/: colors.sh  logging.sh  os.sh  prompt.sh  state.sh
tools/preflight/: check-binaries.sh  check-cluster.sh  check-credentials.sh  detect-os.sh  install-tool.sh  main.sh
tools/usecase-templates/cascade/: README.md  alert_template.yaml  dashboard_panels.json  evaluator_template.yaml  k6_template.js
tools/usecase-templates/leaderboard/: README.md  alert_template.yaml  dashboard_panels.json  evaluator_template.yaml  k6_template.js
tools/usecase-templates/per-user-pattern/: README.md  alert_template.yaml  dashboard_panels.json  evaluator_template.yaml  k6_template.js
tools/usecase-templates/single-event-severity/: README.md  alert_template.yaml  dashboard_panels.json  evaluator_template.yaml  k6_template.js
tools/usecase-templates/trace-and-fix/: README.md  alert_template.yaml  dashboard_panels.json  evaluator_template.yaml  k6_template.js
tools/usecase_build/: __init__.py  __main__.py  compiler.py  importer.py  schema.py
tools/usecase_build/emitters/: __init__.py  alert.py  dashboard.py  evaluator.py  registry_row.py  scenario.py  slo.py
wiki/: FAQ.md  (+8 more)
(+473 files in other folders)
