[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-gateway"
version = "0.2.0"
description = "Observibelity LLM gateway — centralized routing in front of Anthropic / Ollama / future providers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Observibelity", email = "noreply@wombatwags.com" },
]
keywords = ["llm", "fastapi", "anthropic", "ollama", "opentelemetry", "ai-observability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "httpx>=0.27,<1.0",
    "anthropic>=0.39,<1.0",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "prometheus-client>=0.20,<1.0",
    # Sigil SDK feeds Grafana Cloud's AI Observability plugin (the
    # Conversations / Tools / Analytics views). Pinned to a permissive
    # range so PyPI patch releases roll forward; >=0.3 has the modern
    # gRPC ingest the cloud endpoint requires.
    "sigil-sdk>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
]

[project.urls]
Homepage = "https://github.com/stephenwagner-grafana/observibelity"
Documentation = "https://github.com/stephenwagner-grafana/observibelity/tree/main/docs"
Source = "https://github.com/stephenwagner-grafana/observibelity"

# Provider plugins discovered at startup via importlib.metadata.entry_points.
# Phase 1 ships Anthropic + Ollama; Phase 2+ may add OpenAI, Gemini, vLLM, etc.
[project.entry-points."observibelity.providers"]
anthropic = "llm_gateway.providers.anthropic:AnthropicProvider"
ollama = "llm_gateway.providers.ollama:OllamaProvider"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_gateway*"]

# The Dockerfile copies app/ -> llm_gateway/ in the build context so that
# `pip install .` produces a real `llm_gateway` Python package matching the
# entry-point group above. Tests still `from app.*` against the source tree.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
