[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neoncart"
version = "0.2.0"
description = "NeonCart e-commerce frontend (FastAPI + Jinja2 + HTMX) for the ObserVIBElity demo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ObserVIBElity contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "pydantic>=2.9",
  "asyncpg>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "httpx>=0.27",
  "opentelemetry-distro[otlp]>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-asyncpg>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "prometheus-client>=0.20",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
