[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "observibelity-specialist-base"
version = "0.2.0"
description = "Shared base class + FastAPI route mounting helper for ObserVIBElity specialist pods."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ObserVIBElity contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "httpx>=0.27",
  "opentelemetry-distro[otlp]>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["specialist_base*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
