[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observibelity-tool-base"
version = "0.2.0"
description = "Shared base class + FastAPI mount for ObserVIBElity tool microservices."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "ObserVIBElity contributors" },
]
keywords = ["observability", "ai", "tools", "fastapi", "opentelemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
    "cachetools>=5.5",
    "opentelemetry-distro[otlp]>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/stephenwagner-grafana/observibelity"
Repository = "https://github.com/stephenwagner-grafana/observibelity"

[tool.hatch.build.targets.wheel]
packages = ["tool_base"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
