[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observibelity-tool-add-to-cart"
version = "0.2.0"
description = "Cart-add tool for ObserVIBElity (agent-visible side of the cart UX)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]
