[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observibelity-tool-geo-lookup"
version = "0.2.0"
description = "ObserVIBElity tool: resolve IP or ZIP to country/state/city."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "observibelity-tool-base==0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
