[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observibelity-tool-verify-inventory"
version = "0.2.0"
description = "Inventory-verify tool for ObserVIBElity (LLM-using SKU shim with planted bit-budget truncation)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "httpx>=0.27",
  "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]
